--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -24,6 +24,7 @@
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
